--- a/.github/workflows/grs.yml
+++ b/.github/workflows/grs.yml
@@ -20,14 +20,6 @@ jobs:
           options: username=${{ github.repository_owner }}&show_icons=true&theme=algolia
           path: profile/stats.svg
           token: ${{ secrets.GITHUB_TOKEN }}
-        
-      - name:  Generate top languages card
-        uses: readme-tools/github-readme-stats-action@v1
-        with:
-          card: top-langs
-          options: username=${{ github.repository_owner }}&theme=algolia&langs_count=8
-          path: profile/top-langs.svg
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Generate pin Brisk card
         uses: readme-tools/github-readme-stats-action@v1
@@ -45,11 +37,19 @@ jobs:
           path: profile/pin-grain.svg
           token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
 
+      - name:  Generate top languages card
+        uses: readme-tools/github-readme-stats-action@v1
+        with:
+          card: top-langs
+          options: username=${{ github.repository_owner }}&theme=algolia&langs_count=25
+          path: profile/top-langs.svg
+          token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Generate wakatime card
         uses: readme-tools/github-readme-stats-action@v1
         with:
           card: wakatime
-          options: username=Spotandjake&theme=algolia&v=4
+          options: username=Spotandjake&theme=algolia&v=4&langs_count=25
           path: profile/wakatime.svg
           token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
 
@@ -58,5 +58,5 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
           git add profile/*.svg
-          git commit -m "Update README cards" || exit 0
+          git commit -m "chore: Update README cards" || exit 0
           git push
